style.css
body {
    background-color: darkgray;
    color: black;
    font-family: 'Poppins', sans-serif;
}

body.dark-mode {
    background-color: #111;
    color: white;
}

body.dark-mode .skills {
    background-color: #1e1e1e;
    color: white;
}

body.dark-mode .profile {
    background-color: #1e1e1e;
    color: white;
}

body.dark-mode section {
    background-color: #1e1e1e;
    color: white;
}


h1,h2,h3 {
    font-weight: 600;
}

p {
    font-weight: 400;
}

nav {
    background-color: rgba(255, 255, 255, 0.335);
    padding: 10px 20px;
    position: sticky;
    top: 0;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
    z-index: 100;
}

nav.scroll {
    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
}

nav ul {
    display: none;
    list-style: none;
    justify-content: right;
    gap: 20px;
    margin: 0;
    padding: 0;
}

nav ul.active {
    display: flex;
}

nav a {
    color: black;
    text-decoration: none;
    font-weight: bold;
}

nav a {
    position: relative;
}

nav a::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: -3px;
    width: 0%;
    height: 2px;
    background: black;
    transition: width 0.3s ease;
}

nav a:hover::after {
    width: 100%;
}

main {
    max-width: 1000px;
    margin: auto;
    padding: 20px;
}

section {
    background-color: white;
    width: 90%;
    margin: 0 auto;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 1)
}

#profile {
    min-height: 75vh;
    display: flex;
    gap: 20px;
    align-items: center;
    margin-bottom: 50px;
    transition: all 0.3s ease;
}

#profile:hover {
    transform: translateY(-5px);
}

#profile img {
    width: 100%;
    max-width: 500px;
    height: auto;
    border-radius: 10px;
    display: block;
}

#skills {
    text-align: center;
    max-width: 1000px;
    padding: 20px;
    margin-bottom: 50px;
    color: black;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    transition: all 0.3s ease;
}

#skills:hover {
    transform: translateY(-5px);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.15);
}

.skills-layout {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 40px;
}

.skills-icons {
    display: grid;
    grid-template-columns: repeat(3, 80px);
    gap: 20px;
    max-width: 300px;
}

.skill-box {
    width: 80px;
    height: 80px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    background: white;
    box-shadow: 0 3px 10px rgba(0,0,0,0.15);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.skill-box:hover {
    transform: translateY(-8px);
    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
}

.skill-box img {
    max-width: 60%;
}

.article-skills {
    max-width: 400px;
    text-align: left;
    line-height: 1.6;
    gap: 10px;
}

.skill-progress{
    display:flex;
    align-items:center;
    gap:10px;
    margin:10px 0;
}

.progress-bar {
    width: 200px;
    height: 7px;
    background: #ddd;
    border-radius: 10px;
    overflow: hidden;
}

.progress{
    height: 100%;
    background: #4CAF50;
}

.skill-progress span:first-child {
    width: 90px;
}

#skills-progres {
    margin-bottom: 50px;
    transition: all 0.3s ease;
}

#skills-progres:hover {
    transform: translateY(-7px);
}

#skills-progres h2 {
    text-align: center;
}

.html {
    width: 70%;
}

.css {
    width: 50%;
}

.js {
    width: 10%;
}

.project-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    gap: 20px;
    margin-top: 50px;
}


.project-item {
    overflow: hidden;
}

.project-item img {
    width: 100%;
    height: auto;
    margin-bottom: 50px;
    border-radius: 10px;
    transition: all 0.3s ease;
}

.project-item:hover {
    transform: scale(1.1) translateY(-5px)
}

.project-item:hover img {
    transform: translateY(-5px);
}

.project-item p {
    text-align: center;
}

.project h2 {
    text-align: center;
}

#article {
    text-align: center;
    margin-top: 40px;
    gap: 20px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
    transition: all 0.3s ease;
}

#article:hover {
    transform: translateY(-5px);
    box-shadow: 0 5px 15px rgba(0, 0, 0, 1);
}

#article h2 {
    font-weight: bold;
}

#contact {
    margin-top: 40px;
    text-align: center;
}

.contact-me {
    display: flex;
    justify-content: center;
    gap: 20px;
    flex-wrap: wrap;
    margin-top: 40px;
}

.contact-box {
    display: flex;
    align-items: center;
    gap: 5px;
    padding: 15px 25px;
    border-radius: 10px;
    background: white;
    text-decoration: none;
    color: black;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 1);
    transition: all 0.3s ease;
}

.contact-box img {
    width: 25px;
}

.contact-box:hover {
    transform: translateY(-5px);
     box-shadow: 0 6px 15px rgba(0,0,0,0.15);
}

.hidden {
    opacity: 0;
    transform: translateY(30px);
    transition: all 0.7s ease;
}

.show {
    opacity: 1;
    transform: translateY(0);
}

html {
    scroll-behavior: smooth;
}

@media (max-width: 768px) {
    .contact-me {
        flex-direction: column;
        align-items: center;
    }
}

@media (max-width: 768px) {
    .profile {
        flex-direction: column;
        align-items: center;
    }
}

@media (max-width: 768px) {
    .skills-layout {
        flex-direction: column;
        text-align: center;
    }
}

@media (max-width: 480px) {
    .contact-me {
        flex-direction: column;
        gap: 15px;
        align-items: center;
    }
}

